2005-03-13  Ian McIntosh  <ian_mcintosh@linuxadvocate.org>

	* src/map.c: Remove debugging message.
	
2005-03-13  Ian McIntosh  <ian_mcintosh@linuxadvocate.org>

	* src/layers.c: Add warning for bad color strings in layers.xml file.
	* src/map.c: Read map in fixed-location tiles to take advantage of MySQL query caching.
	* src/db.c: Enable query cache in embedded MySQL server.
	* src/map_draw_cairo.c: Allowing drawing of more road labels by permitting label to go over end of road slightly (scenemanager still prevents overlapping with other labels).

2005-03-13  Ian McIntosh  <ian_mcintosh@linuxadvocate.org>

	* src/point.c:
	* src/track.c:
	* src/location.c:
	* src/locationset.c:
	* src/pointstring.c: Change name of chunk allocators (just the text name used for debugging).
	* src/pointstring.c: Pass TRUE to g_ptr_array_free to free array memory.  Properly free pointstring name.
	* src/import_tiger.c: Pass TRUE to g_ptr_array_free to free array memory.
	* src/map.c: Add assertion that cleanup behaves as expected.

2005-03-10  Ian McIntosh  <ian_mcintosh@linuxadvocate.org>

	* src/map.c: Commented out scenemanager demo (rectangle).

2005-03-09  Ian McIntosh  <ian_mcintosh@linuxadvocate.org>

	* src/map.c: MySQL optimization regarding GeomFromText() which saves about 10% total application CPU time. (Not as big of a deal as it sounds since we're currently disk-bound.)
	* src/map_draw_cairo.c: Re-add check for font size == 0 and don't draw labels for that layer if it is (this is how styles say "no labels").
	* src/scenemanager.c: Minor cleanup.

2005-03-09  Ian McIntosh  <ian_mcintosh@linuxadvocate.org>

	* src/search_road.c:
	* src/import_tiger.c:
	* src/db.c: Removed Road_RoadName joiner table.  Roads can have only one name now (we never used this feature).