@@ -151,10 +151,10 @@ static void searchwindow_go_to_selected_result(void)
 			RESULTLIST_ZOOMLEVEL, &nZoomLevel,
 			-1);
 
-		mainwindow_set_centerpoint(&pt);
+		mainwindow_map_center_on_mappoint(&pt);
+		//mainwindow_statusbar_update_position();
 		mainwindow_set_zoomlevel(nZoomLevel);
 		mainwindow_draw_map(DRAWFLAG_ALL);
-		mainwindow_statusbar_update_position();
 	}
 }
 
